Added centipede demo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <HMTL>
   <body>
-    <h1> Success! </h1>
+    <h1> Caleb Morris' Demos </h1>
+    <a href="./centipede/dart_centipede.html">centipede</a>
   </body>
 </HTML>
