--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<HMTL>
-  <body>
-    <h1> Caleb Morris' Demos </h1>
-    <a href="./centipede/dart_centipede.html">centipede</a>
-  </body>
-</HTML>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+  		<meta charset="UTF-8">
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<title>My Github.IO Page</title>
+	</head>
+	<body id='body'>
+	<script src="./bundle.js"></script></body>
+</html>
