--- a/io.core/app/index_template.html
+++ b/io.core/app/index_template.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-  		<meta charset="UTF-8">
-  		<meta name="viewport" content="width=device-width, initial-scale=1">
-  		<title>{%=o.htmlWebpackPlugin.options.title%}</title>
-	</head>
-	<body id='body'>
-	</body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+      <title>{%=o.htmlWebpackPlugin.options.title%}</title>
+  </head>
+  <body id='body'>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  </body>
 </html>
