Added link preview info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 
 <html>
   <head>
+    <title>Countdown to Reaper by Will Wight</title>
+    <meta property="og:title" content="Reaper Countdown" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://calebmorris.github.io/" />
+    <meta property="og:image" content="calebmorris.github.io_.png" />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/jquery.countdown.css"> 
     <script type="text/javascript" src="assets/js/jquery.plugin.min.js"></script> 
