--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       .component {
         width: 240px;
         height: 240px;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         margin: -70px 0 0 -115px;
       }
       .centered-back {
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         margin:-405px 0 0 -270px;
@@ -40,10 +40,8 @@
         text-align: center;
         font-family: 'Quattrocento Sans', sans-serif;
         color: white;
-        /* background: #142456; */
-        top: 100px;
-        padding: 5px;
-        margin: -10px;
+        margin-top: -300px;
+        top: 50%;
         width: 100%;
         z-index: 100;
         position: fixed;
@@ -59,6 +57,9 @@
         width: 100%;
         z-index: 100;
         position: fixed;
+      }
+      #countdown-text {
+        font-size: 3.0vh;
       }
     </style>
   </head>
