--- a/index.html
+++ b/index.html
@@ -10,58 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/jquery.countdown.css"> 
     <script type="text/javascript" src="assets/js/jquery.plugin.min.js"></script> 
     <script type="text/javascript" src="assets/js/jquery.countdown.min.js"></script>
-    <style>
-      .image1 { animation:thing 2s linear infinite; }
-      .image2 { animation:thing 11s linear infinite; }
-      .image3 { animation:thing 17s linear infinite; }
-      .image4 { animation:thing 9s linear infinite; }
-      .image5 { animation:thing 3s linear infinite; }
-      .image6 { animation:thing 7s linear infinite; }
-      .component {
-        width: 240px;
-        height: 240px;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        margin: -70px 0 0 -115px;
-      }
-      .centered-back {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        margin:-405px 0 0 -270px;
-      }
-      @keyframes thing {
-        0% { opacity: 1; }
-        50% { opacity: 0; }
-        100% { opacity: 1; transform: rotate(360deg); }
-      }
-      #reaper-ref-container {
-        text-align: center;
-        font-family: 'Quattrocento Sans', sans-serif;
-        color: white;
-        margin-top: -300px;
-        top: 50%;
-        width: 100%;
-        z-index: 100;
-        position: fixed;
-      }
-      #countdown-container {
-        text-align: center;
-        font-family: 'Quattrocento Sans', sans-serif;
-        color: white;
-        background: #142456;
-        bottom: 100px;
-        margin-bottom: 10px;
-        margin: -10px;
-        width: 100%;
-        z-index: 100;
-        position: fixed;
-      }
-      #countdown-text {
-        font-size: 3.0vh;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="assets/css/reaper-countdown.css">
   </head>
   <body style="background-color: 615699;">
     <!-- Hello There! 🐢 -->
