Added hidden comment

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </style>
   </head>
   <body style="background-color: 615699;">
+    <!-- Hello There! 🐢 -->
     <div id="book-cover-container">
       <img class="centered-back" src="assets/img/reaper-cover-cleaned.png"         alt="" width="540" height="810">
       <img class="component image1" src="assets/img/reaper-orb-content_sized.png"  alt="">
