Moved book cover dims to CSS

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <body style="background-color: 615699;">
     <!-- Hello There! 🐢 -->
     <div id="book-cover-container">
-      <img class="centered-back" src="assets/img/reaper-cover-cleaned.png"         alt="" width="540" height="810">
+      <img class="centered-back" src="assets/img/reaper-cover-cleaned.png"         alt="">
       <img class="component image1" src="assets/img/reaper-orb-content_sized.png"  alt="">
       <img class="component image2" src="assets/img/reaper-orb-content_sized.png"  alt="">
       <img class="component image3" src="assets/img/reaper-orb-content_sized.png"  alt="">
       <img class="component image4" src="assets/img/reaper-orb-content_sized.png"  alt="">
       <img class="component image5" src="assets/img/reaper-orb-content_sized.png"  alt="">
       <img class="component image6" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="centered-back" src="assets/img/reaper-cover-cleaned-sans-orb-content.png" alt="" width="540" height="810">
+      <img class="centered-back" src="assets/img/reaper-cover-cleaned-sans-orb-content.png" alt="">
     </div>
     <a href="https://www.willwight.com/">
       <div id="reaper-ref-container">
