Updated aspects to use view-height as the fixed dimension

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
     <a href="https://www.willwight.com/">
       <div id="reaper-ref-container">
-        <img src="assets/img/will-wight_from-site-view-3.png" width="500" />
-        <div/>
-        <img src="assets/img/reaper_from-banner.png" width="400" />
+        <img id="will-wight-tag" src="assets/img/will-wight_from-site-view-3.png" />
+        <div></div>
+        <img id="reaper-tag" src="assets/img/reaper_from-banner.png" />
       </div>
     </a>
     <div id="countdown-container">
