Created Dreadgod countdown page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <html>
   <head>
-    <title>Countdown to Reaper by Will Wight</title>
-    <meta property="og:title" content="Reaper Countdown" />
+    <title>Countdown to Dreadgod by Will Wight</title>
+    <meta property="og:title" content="Dreadgod Countdown" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://calebmorris.github.io/" />
     <meta property="og:image" content="https://calebmorris.github.io/calebmorris.github.io_.png" />
@@ -11,36 +11,27 @@
     <script type="text/javascript" src="assets/js/jquery.plugin.min.js"></script> 
     <script type="text/javascript" src="assets/js/jquery.countdown.min.js"></script>
     <script type="text/javascript" src="assets/js/final-end.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/reaper-countdown.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/reaper-animations.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/dreadgod-countdown.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/dreadgod-animations.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   </head>
-  <body style="background-color: 615699;">
+  <body style="background-color: 131f35;">
     <!-- Hello There! 🐢 -->
-    <div id="book-cover-container">
-      <img class="centered-back" src="assets/img/reaper-cover-cleaned.png"         alt="">
-      <img class="component image1" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="component image2" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="component image3" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="component image4" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="component image5" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="component image6" src="assets/img/reaper-orb-content_sized.png"  alt="">
-      <img class="centered-back" src="assets/img/reaper-cover-cleaned-sans-orb-content.png" alt="">
-    </div>
     <a href="https://www.willwight.com/">
-      <div id="reaper-ref-container">
-        <img id="will-wight-tag" src="assets/img/will-wight_from-site-view-3.png" />
-        <div></div>
-        <img id="reaper-tag" src="assets/img/reaper_from-banner.png" />
+      <div id="book-cover-container">
+        <img class="centered-back" src="assets/img/dreadgod_book-cover.jpg"         alt="">
+        <img class="component image1" src="assets/img/dreadgod_halo-with-no-background_2.png"  alt="">
+        <img class="component image2" src="assets/img/dreadgod_halo-with-no-background_2.png"  alt="">
+        <img class="component image3" src="assets/img/dreadgod_halo-with-no-background_2.png"  alt="">
+        <img class="component image4" src="assets/img/dreadgod_halo-with-no-background_2.png"  alt="">
+        <img class="component image5" src="assets/img/dreadgod_halo-with-no-background_2.png"  alt="">
+        <img class="component image6" src="assets/img/dreadgod_halo-with-no-background_2.png"  alt="">
       </div>
     </a>
     <div id="countdown-container">
       <h2 id="countdown-text">
         11 Days, 29 Minutes, and 20 Seconds
       </h2>
-    </div>
-    <div id="trigger-end">
-      <button id="trigger-end-button" type="button" class="btn btn-dark bg-transparent hidden-end-button">Replay the END</button>
     </div>
   </body>
 </html>
