--- a/old-countdowns/dreadgod/index.html
+++ b/old-countdowns/dreadgod/index.html
@@ -4,8 +4,8 @@
     <title>Countdown to Dreadgod by Will Wight</title>
     <meta property="og:title" content="Dreadgod Countdown" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://calebmorris.github.io/" />
-    <meta property="og:image" content="https://calebmorris.github.io/calebmorris.github.io_.png" />
+    <meta property="og:url" content="https://calebmorris.github.io/old-countdowns/dreadgod/" />
+    <meta property="og:image" content="https://calebmorris.github.io/old-countdowns/dreadgod/dreadgod-cover.png" />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/jquery.countdown.css"> 
     <script type="text/javascript" src="assets/js/jquery.plugin.min.js"></script> 
